--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Agenda de Actividades",
   "short_name": "Agenda",
   "lang": "es",
-  "start_url": "index.html",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#f4f4f7",
   "theme_color": "#9b59b6",
